Cleanup main render method of MixinInGameHud